--- a/index.html
+++ b/index.html
@@ -3,50 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photography Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>John Doe Photography</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #fff;
+            color: #333;
         }
 
         header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px 0;
             text-align: center;
+            padding: 50px 20px;
         }
 
         header h1 {
-            margin: 0;
-            font-size: 36px;
+            font-size: 3rem;
+            margin-bottom: 10px;
         }
 
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #444;
-        }
-
-        nav a {
-            color: #fff;
-            padding: 15px 25px;
-            text-decoration: none;
-            text-transform: uppercase;
-            font-size: 14px;
-        }
-
-        nav a:hover {
-            background-color: #555;
+        header p {
+            font-size: 1.2rem;
+            color: #777;
         }
 
         .gallery {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 16px;
+            gap: 20px;
             padding: 20px;
         }
 
@@ -54,7 +43,6 @@
             width: 100%;
             height: auto;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
         }
 
@@ -62,59 +50,51 @@
             transform: scale(1.05);
         }
 
+        .contact {
+            text-align: center;
+            padding: 30px;
+            background-color: #f4f4f4;
+        }
+
+        .contact p {
+            font-size: 1.2rem;
+            color: #555;
+        }
+
         footer {
             text-align: center;
             padding: 20px;
             background-color: #333;
             color: #fff;
-            position: relative;
-            bottom: 0;
-            width: 100%;
+            font-size: 1rem;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>John Doe Photography</h1>
-        <p>Capturing Moments, Telling Stories</p>
-    </header>
 
-    <nav>
-        <a href="#about">About</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-    </nav>
+<header>
+    <h1>John Doe</h1>
+    <p>Photographer | Capturing Life’s Moments</p>
+</header>
 
-    <section id="about">
-        <div style="text-align: center; padding: 40px 20px;">
-            <h2>About Me</h2>
-            <p>Hi! I'm John Doe, a passionate photographer with a love for capturing the beauty in the world around us. I specialize in landscape and portrait photography, and I strive to tell stories through my lens.</p>
-        </div>
-    </section>
+<div class="gallery">
+    <img src="https://via.placeholder.com/600x400" alt="Photo 1">
+    <img src="https://via.placeholder.com/600x400" alt="Photo 2">
+    <img src="https://via.placeholder.com/600x400" alt="Photo 3">
+    <img src="https://via.placeholder.com/600x400" alt="Photo 4">
+    <img src="https://via.placeholder.com/600x400" alt="Photo 5">
+    <img src="https://via.placeholder.com/600x400" alt="Photo 6">
+</div>
 
-    <section id="portfolio" class="gallery">
-        <h2 style="text-align: center; padding: 20px 0;">Portfolio</h2>
-        <div class="gallery">
-            <img src="https://via.placeholder.com/600x400" alt="Portfolio Image 1">
-            <img src="https://via.placeholder.com/600x400" alt="Portfolio Image 2">
-            <img src="https://via.placeholder.com/600x400" alt="Portfolio Image 3">
-            <img src="https://via.placeholder.com/600x400" alt="Portfolio Image 4">
-            <img src="https://via.placeholder.com/600x400" alt="Portfolio Image 5">
-            <img src="https://via.placeholder.com/600x400" alt="Portfolio Image 6">
-        </div>
-    </section>
+<div class="contact">
+    <p>Interested in my work? Let's talk!</p>
+    <p>Email: john.doe@email.com</p>
+    <p>Phone: (123) 456-7890</p>
+</div>
 
-    <section id="contact" style="background-color: #333; color: #fff; padding: 40px 20px;">
-        <div style="text-align: center;">
-            <h2>Contact</h2>
-            <p>If you'd like to work with me or have any questions, feel free to reach out!</p>
-            <p>Email: john.doe@email.com</p>
-            <p>Phone: (123) 456-7890</p>
-        </div>
-    </section>
+<footer>
+    <p>&copy; 2025 John Doe Photography</p>
+</footer>
 
-    <footer>
-        <p>&copy; 2025 John Doe Photography</p>
-    </footer>
 </body>
 </html>
