--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Photography Portfolio</title>
+    <title>Sungyoon Lim</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     
@@ -14,10 +14,8 @@
     <div id="mobileNav">
         <nav class="mobile-nav">
             <ul>
-                <li><a href="/">Mimbres River Valley</a></li>
-                <li><a href="/seascape">Seascape</a></li>
                 <li><a href="/portraits">Portraits</a></li>
-                <li><a href="/oaxaca">Oaxaca</a></li>
+                <li><a href="/other">Other Photos</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
@@ -37,7 +35,7 @@
         <!-- Gallery Section -->
         <div id="gallery">
             <div class="gallery-category">
-                <h2>Mimbres River Valley</h2>
+                <h2>Portraits</h2>
                 <div class="gallery-images">
                     <!-- Example images, replace with your own -->
                     <img src="image1.jpg" alt="Image 1">
@@ -45,7 +43,7 @@
                 </div>
             </div>
             <div class="gallery-category">
-                <h2>Seascape</h2>
+                <h2>Other Photos</h2>
                 <div class="gallery-images">
                     <img src="image3.jpg" alt="Image 3">
                     <img src="image4.jpg" alt="Image 4">
