--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Sungyoon Lim</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
-    
 </head>
 <body>
 
@@ -14,10 +13,10 @@
     <div id="mobileNav">
         <nav class="mobile-nav">
             <ul>
-                <li><a href="/portraits">Portraits</a></li>
-                <li><a href="/other">Other Photos</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a href="#portraits">Portraits</a></li>
+                <li><a href="#other-photos">Other Photos</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -34,7 +33,7 @@
 
         <!-- Gallery Section -->
         <div id="gallery">
-            <div class="gallery-category">
+            <div class="gallery-category" id="portraits">
                 <h2>Portraits</h2>
                 <div class="gallery-images">
                     <!-- Example images, replace with your own -->
@@ -42,13 +41,25 @@
                     <img src="image2.jpg" alt="Image 2">
                 </div>
             </div>
-            <div class="gallery-category">
+            <div class="gallery-category" id="other-photos">
                 <h2>Other Photos</h2>
                 <div class="gallery-images">
                     <img src="image3.jpg" alt="Image 3">
                     <img src="image4.jpg" alt="Image 4">
                 </div>
             </div>
+        </div>
+
+        <!-- About Section (Example) -->
+        <div id="about">
+            <h2>About</h2>
+            <p>Information about the photographer.</p>
+        </div>
+
+        <!-- Contact Section (Example) -->
+        <div id="contact">
+            <h2>Contact</h2>
+            <p>Contact information or form.</p>
         </div>
 
         <!-- Footer Section -->
